# apex-14

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  PHYSICS_CHANGE.md  README.md  opt_circle_telemetry.csv  opt_oval_telemetry.csv  qss_circle_telemetry.csv  qss_monza_telemetry.csv  qss_oval_telemetry.csv  qss_silverstone_telemetry.csv  raceline_model.safetensors  raceline_model.safetensors.meta.json  setup.sh  test_laps.py
.githooks/: pre-commit
.github/: bench-history-README.md
.github/workflows/: bench-history.yml  ci.yml  fuzz.yml
bins/apex-cli/: Cargo.toml
bins/apex-cli/src/: main.rs  seed.rs
bins/apex-cli/tests/: golden_lap.rs
bins/apex-cli/tests/fixtures/golden/: f1_2024_calibrated__circle__optimize_hermite_simpson.json  f1_2024_calibrated__oval_default__qss.json  f1_2024_calibrated__silverstone_synthetic__qss.json
bins/compare/: Cargo.toml
bins/compare/src/: main.rs
bins/optimize/: Cargo.toml
bins/optimize/src/: main.rs
bins/sim-hud/: Cargo.toml
bins/sim-hud/src/: main.rs
bins/sim-server/: Cargo.toml
bins/sim-server/src/: ai_driver.rs  main.rs
bins/simulate/: Cargo.toml
bins/simulate/src/: main.rs
bins/train-driver/: Cargo.toml
bins/train-driver/src/: main.rs  seed.rs
bins/train-raceline/: Cargo.toml
bins/train-raceline/src/: main.rs  seed.rs
bins/validate/: Cargo.toml
bins/validate/src/: main.rs
bins/viewer/: Cargo.toml
bins/viewer/src/: main.rs
bins/web-viewer/: Cargo.toml  index.html
bins/web-viewer/src/: main.rs
cars/: README.md  catalunya_2024q_fitted.toml  f1_2024_calibrated.toml  f1_2024_default.toml  f3_car.toml  monza_2024q_fitted.toml  silverstone_2024q_fitted.toml  silverstone_optimized.toml  spa_2024q_fitted.toml  spielberg_2024q_fitted.toml
crates/apex-correlate/: Cargo.toml
crates/apex-correlate/src/: align.rs  driven.rs  error.rs  estimator.rs  identify.rs  importer.rs  infer.rs  lib.rs  mapping.rs  metrics.rs  project.rs  report.rs  resample.rs  telemetry.rs  units.rs  writer.rs
crates/apex-correlate/src/estimator/: tests.rs
crates/apex-correlate/tests/: correlate_smoke.rs  import.rs  resample_prop.rs  roundtrip.rs
crates/apex-correlate/tests/fixtures/: correlate_synth_lap.csv  raw_source.csv  raw_source_mapping.toml  synthetic_lap.csv
crates/apex-integrator/: Cargo.toml
crates/apex-integrator/src/: lib.rs  (+3 more)
crates/apex-math/: Cargo.toml
crates/apex-ml/: Cargo.toml
crates/apex-ml/src/: data.rs  io.rs  lib.rs  net.rs  pipeline.rs  train.rs  warmstart.rs
crates/apex-optimizer/: Cargo.toml
crates/apex-optimizer/benches/: dynamics_rhs.rs  integrator_bench.rs  optimizer_bench.rs  suspension_bench.rs  tire_model_bench.rs
crates/apex-optimizer/src/: cmaes.rs  collocation.rs  direct_solver.rs  envelope_ocp.rs  forward_sim.rs  gauss_newton.rs  ipm.rs  layout_optimizer.rs  lib.rs  mesh_refinement.rs  nlp.rs  overtaking.rs  precond.rs  racing_quality.rs  rank_stability.rs  scaling.rs  settings_hash.rs  setup.rs  setup_eval.rs  solver.rs
crates/apex-optimizer/tests/: envelope_ocp.rs  ip_solver.rs  kkt_precond.rs  kkt_precond_sweep.rs
crates/apex-physics/: Cargo.toml
crates/apex-physics/benches/: trim_bench.rs
crates/apex-physics/src/: aero.rs  bicycle.rs  car_config.rs  car_params.rs  controller.rs  drivetrain.rs  envelope.rs  fourteen_dof.rs  grip_map.rs  lib.rs  point_mass.rs  qss.rs  sensitivity.rs  seven_dof.rs  strategy.rs  suspension.rs  trim.rs  wake.rs  weather.rs
crates/apex-physics/src/tire/: combined_slip.rs  fitting.rs  mod.rs  pacejka.rs  thermal.rs
crates/apex-physics/tests/: content_hash.rs  envelope_integration.rs  prop_car_config.rs  prop_gz_pathway.rs  prop_tire.rs  tumftm_silverstone.rs
crates/apex-race/: Cargo.toml
crates/apex-race/src/: config.rs  events.rs  lib.rs  monte_carlo.rs  sim.rs  strategy_opt.rs
crates/apex-race/tests/: content_hash.rs
crates/apex-rl/: Cargo.toml
crates/apex-rl/src/: env.rs  lib.rs  observation.rs  policy.rs  ppo.rs  reward.rs  train.rs
crates/apex-sim/: Cargo.toml
crates/apex-sim/src/: lib.rs  protocol.rs  realtime.rs  server.rs  shared_mem.rs
crates/apex-telemetry/: Cargo.toml  build.rs
crates/apex-telemetry/src/: channels.rs  csv_export.rs  lib.rs  motec.rs  parquet_export.rs  run_metadata.rs  svg_envelope.rs  svg_track.rs
crates/apex-track/: Cargo.toml
crates/apex-viewer/: Cargo.toml
crates/apex-viewer/src/: app.rs  hud.rs  lib.rs  telemetry.rs  track_view.rs
docs/: analysis.md  channels.md  interop.md  protocol.md  telemetry_format.md
docs/design/: README.md  gn-solver-bound-deadlock.md  nlp-scaling.md
docs/math/: collocation.md  envelope_ocp.md  equations_of_motion.md  estimation.md  inference.md  pacejka.md  track3d.md
docs/validation/: correlation_catalunya_2024q.md  correlation_monza_2024q.md  correlation_silverstone_2024q.md  correlation_spa_2024q.md  correlation_spa_envelope.md  correlation_spielberg_2024q.md  correlation_summary.md  methodology.md  silverstone.md  track3d.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/fuzz_track_json/: seed_track.json
fuzz/fuzz_targets/: fuzz_track_csv.rs  fuzz_track_json.rs  fuzz_udp_packet.rs
results/: 2026-07-05-188bf38.json  2026-07-05-2b67ce5.json  2026-07-05-fdac21e.json  2026-07-06-253ccc2.json  2026-07-06-401ebee.json  2026-07-06-4592f4e.json  2026-07-06-7ead88c.json  2026-07-06-9c38060.json  2026-07-06-a55bcf4.json  2026-07-06-c48e522.json  2026-07-06-d0bb703.json  2026-07-06-f6eb088.json  2026-07-07-0919f34.json  2026-07-07-0f78c21.json  2026-07-07-104b3b6.json  2026-07-07-5b71696.json  2026-07-07-5c7c43d.json  2026-07-07-8a65dba.json  2026-07-07-b2e7d68.json  2026-07-15-03efc76.json  2026-07-15-0feac70.json  2026-07-15-7aa0263.json  2026-07-15-9cda101.json  2026-07-15-d0cae03.json  2026-07-15-f485af7.json  2026-07-16-0d660e6.json  2026-07-16-85b3c0d.json  2026-07-16-e68e6d5.json  2026-07-20-6151fa5.json
telemetry/: README.md
tools/: campaign.toml  correlate_campaign.py  fastf1_export.py  fetch_elevation.py  georef.py  grade_throttle_stats.py  verify_ld.py  verify_parquet.py
tracks/: README.md  oval_simple.json  test_circle.json
(+36 files in other folders)
