[package]
name = "optimize"
version = "0.1.0"
edition.workspace = true

[dependencies]
apex-track = { path = "../../crates/apex-track" }
apex-physics = { path = "../../crates/apex-physics" }
apex-optimizer = { path = "../../crates/apex-optimizer" }
apex-telemetry = { path = "../../crates/apex-telemetry" }
