[package]
name = "optimize"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-track = { path = "../../crates/apex-track" }
apex-physics = { path = "../../crates/apex-physics" }
apex-optimizer = { path = "../../crates/apex-optimizer" }
apex-telemetry = { path = "../../crates/apex-telemetry" }
