[package]
name = "sim-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-sim = { path = "../../crates/apex-sim" }
apex-physics = { path = "../../crates/apex-physics" }
apex-track = { path = "../../crates/apex-track" }
apex-rl = { path = "../../crates/apex-rl" }
candle-core = "0.10"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Used only by the AI-driver tests to construct a temporary policy weights file.
candle-nn = "0.10"
