[package]
name = "simulate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-math = { path = "../../crates/apex-math" }
apex-integrator = { path = "../../crates/apex-integrator" }
apex-track = { path = "../../crates/apex-track" }
apex-physics = { path = "../../crates/apex-physics" }
apex-telemetry = { path = "../../crates/apex-telemetry" }
