[package]
name = "train-driver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-math = { path = "../../crates/apex-math" }
apex-rl = { path = "../../crates/apex-rl" }
apex-track = { path = "../../crates/apex-track" }
apex-physics = { path = "../../crates/apex-physics" }
candle-core = "0.10"
candle-nn = "0.10"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
