[package]
name = "viewer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-viewer = { path = "../../crates/apex-viewer" }
apex-physics = { path = "../../crates/apex-physics" }
apex-track = { path = "../../crates/apex-track" }
eframe = "0.31"
