[package]
name = "apex-correlate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

# Telemetry correlation: import measured car telemetry (e.g. FastF1 exports) in
# the standard Apex telemetry CSV format, map source columns through the channel
# registry, and resample onto a uniform grid.
#
# Deps are intentionally light. This crate is NOT in the wasm (web-viewer) graph
# — it does file I/O and TOML parsing — and must stay out of it. `apex-track`
# and GPS/track alignment arrive in a later task; `apex-math` is not needed yet.
[dependencies]
apex-telemetry = { path = "../apex-telemetry" }
serde = { version = "1", features = ["derive"] }
csv = "1"
toml = "0.8"

[dev-dependencies]
proptest = "1.11"
