[package]
name = "apex-ml"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-track = { path = "../apex-track" }
apex-optimizer = { path = "../apex-optimizer" }
apex-physics = { path = "../apex-physics" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
log = "0.4"
