[package]
name = "apex-optimizer"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-math = { path = "../apex-math" }
apex-integrator = { path = "../apex-integrator" }
apex-physics = { path = "../apex-physics" }
apex-track = { path = "../apex-track" }
rand = "0.9"
rand_distr = "0.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "integrator_bench"
harness = false

[[bench]]
name = "tire_model_bench"
harness = false

[[bench]]
name = "optimizer_bench"
harness = false

[[bench]]
name = "suspension_bench"
harness = false
