[package]
name = "apex-optimizer"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-math = { path = "../apex-math" }
apex-integrator = { path = "../apex-integrator" }
apex-physics = { path = "../apex-physics" }
apex-track = { path = "../apex-track" }
rand = "0.9"
rand_distr = "0.5"
log = "0.4"
rayon = { version = "1.10", optional = true }

[features]
# Parallel batch evaluation of car setups via rayon. Disabled by default for
# targets without threads; mirrors apex-physics's `parallel` feature.
parallel = ["dep:rayon"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "integrator_bench"
harness = false

[[bench]]
name = "tire_model_bench"
harness = false

[[bench]]
name = "optimizer_bench"
harness = false

[[bench]]
name = "suspension_bench"
harness = false
