[package]
name = "apex-race"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-math = { path = "../apex-math" }
apex-physics = { path = "../apex-physics" }
apex-track = { path = "../apex-track" }
apex-optimizer = { path = "../apex-optimizer" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
rand = "0.9"
rand_distr = "0.5"
rayon = "1.10"
