[package]
name = "apex-rl"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-math = { path = "../apex-math" }
apex-integrator = { path = "../apex-integrator" }
apex-track = { path = "../apex-track" }
apex-physics = { path = "../apex-physics" }
candle-core = "0.10"
candle-nn = "0.10"
safetensors = "0.7"
log = "0.4"
