[package]
name = "apex-rl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-math = { path = "../apex-math" }
apex-integrator = { path = "../apex-integrator" }
apex-track = { path = "../apex-track" }
apex-physics = { path = "../apex-physics" }
candle-core = "0.10"
candle-nn = "0.10"
safetensors = "0.7"
log = "0.4"
# Default features off to avoid `getrandom`/`os_rng`, which break
# wasm32-unknown-unknown; we only ever seed explicitly.
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
rand_distr = "0.5"
