[package]
name = "apex-telemetry"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
apex-math = { path = "../apex-math" }
apex-physics = { path = "../apex-physics" }
apex-track = { path = "../apex-track" }
serde = { version = "1", features = ["derive"] }
csv = "1"
