[package]
name = "apex-viewer"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = ["hud"]
# The HUD reads the sim-server's telemetry over UDP, which pulls in apex-sim
# (memmap2, std::net). Disable this feature for targets without those (e.g.
# wasm32) to build the viewer without the real-time HUD.
hud = ["dep:apex-sim"]

[dependencies]
apex-math = { path = "../apex-math" }
apex-physics = { path = "../apex-physics" }
apex-track = { path = "../apex-track" }
apex-telemetry = { path = "../apex-telemetry" }
apex-sim = { path = "../apex-sim", optional = true }
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
